--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,23 +5,18 @@ $large-padding: 12px;
 $small-padding: 8px;
 
 main {
+  $gap-width: $small-padding * 2;
+
   width: 100%;
-  $padding-top: $small-padding * 2 + $header-height;
-  $padding-bottom: $small-padding + 25px;
-  padding: $padding-top $small-padding * 2 $padding-bottom;
+  padding: ($gap-width + $header-height) $gap-width 40px;
 
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: $small-padding * 2;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: $gap-width;
   justify-items: center;
   align-items: center;
 }
 
-@media (max-width : 480px) {
-  main {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
 @media (min-width : 481px) and (max-width : 767px) {
   main {
     grid-template-columns: repeat(2, 1fr);
@@ -111,6 +106,7 @@ main {
   display: inline-block;
   width: 100%;
   height: 100%;
+  background-color: #FFF;
 
   border-radius: $border-radius;
   @include box-shadow(1px 1px 3px 1px rgba(0,0,0,0.2));
@@ -126,7 +122,8 @@ main {
   }
 
   .album-desc {
-    padding: $small-padding $large-padding;
+    // padding: $small-padding $large-padding;
+    padding: 2px $large-padding;
 
     p {
       @include card-text();
@@ -180,9 +177,21 @@ main {
     height: calc(100% - (#{$profile-size} + #{$small-padding} * 2));
 
     margin: 0;
-    padding: 0 $large-padding $small-padding;
+    padding: 0 $small-padding $small-padding;
     list-style: none;
     overflow-y: auto;
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar {
+      width: $small-padding;
+      background-color: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+      background-color: #E5E5E5;
+    }
 
     li {
       height: 20px;
